# BearMaxMiniApp

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/api/: Dockerfile  sitecustomize.py
apps/api/aioredis/: exceptions.py
apps/api/app/: main.py
apps/api/app/admin/: models.py  resources.py  setup.py
apps/api/app/admin/templates/: layout.html
apps/api/app/api/: dependencies.py
apps/api/app/api/routes/: common.py  funds.py  (+2 more)
apps/api/app/core/: config.py
apps/api/app/db/: __init__.py  models.py  session.py
apps/api/app/exceptions/: base.py  handlers.py
apps/api/app/models/: common.py  funds.py  masterclass.py  mentorship.py
apps/api/app/repositories/: base.py  common.py  funds.py  masterclass.py  mentorship.py
apps/api/app/services/: common.py  funds.py  masterclass.py  mentorship.py
apps/bot/: Dockerfile
apps/bot/cmd/maxbot/: main.go
apps/bot/internal/config/: config.go
apps/bot/internal/maxapp/: bot.go
apps/web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: BottomNav.tsx  DynamicForm.tsx  FormField.tsx  FundCard.tsx  Header.tsx  Loader.tsx
apps/web/src/config/: formSchemas.ts
apps/web/src/hooks/: useForm.ts  useImagePreloader.ts  useMaxBridge.ts
apps/web/src/imports/: banner-illustration-paths.ts  form-field-icons.ts  nav-icon-paths.ts
apps/web/src/services/: api.ts
apps/web/src/types/: api.ts  forms.ts  maxBridge.ts
apps/web/src/utils/: validation.ts
deploy/caddy/: Caddyfile.template
(+14 files in other folders)
